--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customar Service</title>
+    <title>Your Cart</title>
     <!-- fontawesome kit -->
     <script src="https://kit.fontawesome.com/0741ba60a7.js"></script>
     <!-- bootstrap css -->
@@ -212,62 +212,77 @@
     <!-- header ends -->
     <!-- main start here -->
     <main>
-        <div class="breadcrumb-links mt-2">
-            <div class="container">
-                <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a style="color: black; text-decoration: none;" href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Customar Service</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-        <div class="p-bnr">
-            <div class="pr-banner">
-                <img src="./assets/products/customer-service_3.jpg" alt="" width="100%">
-            </div>
-        </div>
-        <section class="customar-service-section mt-5 mb-5">
+        <section class="cart-page my-5">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <h5>VAPE STOP ADVANTAGE:</h5>
-                        <div class="advntges d-flex gap-2">
-                            <li>100% Authentic</li>
-                            <li>Free Shipping ৳ 3,000+</li>
-                            <li>60 Day Warranty</li>
-                            <li>Best Price Guarantee</li>
-                            <li>Free Return</li>
+                        <div class="row mb-3">
+                            <div class="col d-flex justify-content-between">
+                                <h5>SHOPPING CART</h5>
+                                <a href="">
+                                    PROCEED TO CHECKOUT
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col-lg-6 col-12">
-                        <h5>WRITE TO US:</h5>
-                        <form>
-                            <div class="row">
-                                <div class="mb-3 col-6">
-                                    <input type="text" class="form-control" required placeholder="Your Name*" id="exampleInputName">
-                                </div>
-                                <div class="mb-3 col-6">
-                                    <input type="email" class="form-control" placeholder="Your Email*" required id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div class="row">
+                            <div class="col table-responsive">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">First</th>
+                                            <th scope="col">Last</th>
+                                            <th scope="col">Handle</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row">1</th>
+                                            <td>Mark</td>
+                                            <td>Otto</td>
+                                            <td>@mdo</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">2</th>
+                                            <td>Jacob</td>
+                                            <td>Thornton</td>
+                                            <td>@fat</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">3</th>
+                                            <td colspan="2">Larry the Bird</td>
+                                            <td>@twitter</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <span>DISCOUNT CODES</span>
+                            </div>
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-8 text-end d-flex flex-column">
+                                        <span>Subtotal Incl. Tax</span>
+                                        <span>Shipping (Flat Rate For Orders < BDT 3000 - Fixed)</span>
+                                        <span><b>Grand Total</b></span>
+                                    </div>
+                                    <div class="col-4 d-flex flex-column text-end">
+                                        <span>BDT 2,290</span>
+                                        <span>BDT 50</span>
+                                        <span>BDT 2,340</span>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-6 mb-3">
-                                    <input type="number"  class="form-control" placeholder="Your Phone No*" required>
-                                </div>
-                                <div class="col-6 mb-3">
-                                    <input type="text"  class="form-control" placeholder="Reason to Contact*" required>
-                                </div>
+                        </div>
+                        <div class="row mt-4">
+                            <div class="col text-end">
+                                <a href="">
+                                    PROCEED TO CHECKOUT
+                                </a>
                             </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <textarea placeholder="Type Your Message*" class="form-control"  required cols="30" rows="10"></textarea>
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary mt-3">Submit</button>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
