--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                     <div class="col d-flex align-items-center cart-sect">
                                         <div class="cart d-flex align-items-center gap-2" id="cart">
                                             <i class="fa-solid fa-cart-shopping"></i>
-                                            <span class="text-white" style="cursor: pointer;">0 ITEM BDT O</span>
+                                            <span class="text-white" id="cart-s-d" style="cursor: pointer;">0 ITEM BDT O</span>
                                         </div>
                                         <div class="cart-popup flex-column gap-1 bg-white" id="cart-popup">
                                             <div class="row">
@@ -94,8 +94,10 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col bg-dark d-flex gap-2 p-3">
-                                                    <button class="btn btn-primary" style="font-size: 13px;white-space: nowrap;">VIEW CART</button>
-                                                    <button class="btn btn-primary" style="font-size: 13px;white-space: nowrap;">CONTINUE SHOPPING</button>
+                                                    <a href="./cart.html">
+                                                        <button class="btn btn-primary" style="font-size: 13px;white-space: nowrap;">VIEW CART</button>
+                                                    </a>
+                                                    <button id="cont-shop" class="btn btn-primary" style="font-size: 13px;white-space: nowrap;">CONTINUE SHOPPING</button>
                                                 </div>
                                             </div>
                                         </div>
