--- a/single-product.html
+++ b/single-product.html
@@ -55,10 +55,51 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="col d-flex align-items-center">
-                                        <div class="cart d-flex align-items-center gap-2">
+                                    <div class="col d-flex align-items-center cart-sect">
+                                        <div class="cart d-flex align-items-center gap-2" id="cart">
                                             <i class="fa-solid fa-cart-shopping"></i>
-                                            <span class="text-white" style="cursor: pointer;">0 ITEM BDT O</span>
+                                            <span class="text-white" id="cart-s-d" style="cursor: pointer;">0 ITEM BDT O</span>
+                                        </div>
+                                        <div class="cart-popup flex-column gap-1 bg-white" id="cart-popup">
+                                            <div class="row">
+                                                <div class="col text-white bg-primary-color text-center p-3">
+                                                    <h3>RECENTLY ADDED ITEMS</h3>
+                                                    <i class="fa-solid fa-xmark" id="x-mark"></i>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col bg-dark d-flex gap-2 p-3">
+                                                    <div class="cart-item-img" style="width: 50px;height: 50px;">
+                                                        <img src="./assets/products/strawberry_mango.jpg" alt="" width="100%" height="100%">
+                                                    </div>
+                                                    <div class="desc">
+                                                        <h6>Item Name</h6>
+                                                        <span>Quantity 1</span>
+                                                    </div>
+                                                    <div class="price">
+                                                        <h6>BDT: 5468</h6>
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col bg-dark p-3 text-center">
+                                                    <h3>CART SUBTOTAL: BDT 5,468</h3>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col bg-dark p-3 text-center">
+                                                    <h3>OTHER CHARGES: BDT 0</h3>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col bg-dark d-flex gap-2 p-3">
+                                                    <a href="./cart.html">
+                                                        <button class="btn btn-primary" style="font-size: 13px;white-space: nowrap;">VIEW CART</button>
+                                                    </a>
+                                                    <button id="cont-shop" class="btn btn-primary" style="font-size: 13px;white-space: nowrap;">CONTINUE SHOPPING</button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
