--- a/cart.html
+++ b/cart.html
@@ -230,48 +230,118 @@
                                     <thead>
                                         <tr>
                                             <th scope="col">#</th>
-                                            <th scope="col">First</th>
-                                            <th scope="col">Last</th>
-                                            <th scope="col">Handle</th>
+                                            <th scope="col">Product</th>
+                                            <th scope="col">Price</th>
+                                            <th scope="col">Quantity</th>
+                                            <th scope="col">Subtotal</th>
+                                            <th scope="col"></th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <th scope="row">1</th>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>@mdo</td>
+                                            <td>
+                                                <div class="row">
+                                                    <div class="col d-flex gap-2">
+                                                        <div class="product-cart-imgbox" style="width: 80px;height: 80px;">
+                                                            <img src="./assets/products/strawberry_mango.jpg" alt="" width="100%" height="100%">
+                                                        </div>
+                                                        <div class="p-c-text" style="width: 300px;">
+                                                            <p class="mb-1">	ELF BAR BC5000, PEACH MANGO WATERMELON | DISPOSABLE VAPE</p>
+                                                            <span>SKU: ELF06-50mg</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>BDT 2,290</td>
+                                            <td>
+                                                <div class="row">
+                                                    <div class="col d-flex gap-1">
+                                                        <input type="number" class="form-control" style="width: 50px;" value="1">
+                                                        <button class="btn btn-primary">Update</button>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>BDT 2,290</td>
+                                            <td><i style="cursor: pointer;" class="fa-solid fa-trash"></i></td>
                                         </tr>
                                         <tr>
                                             <th scope="row">2</th>
-                                            <td>Jacob</td>
-                                            <td>Thornton</td>
-                                            <td>@fat</td>
+                                            <td>
+                                                <div class="row">
+                                                    <div class="col d-flex gap-2">
+                                                        <div class="product-cart-imgbox" style="width: 80px;height: 80px;">
+                                                            <img src="./assets/products/strawberry_mango.jpg" alt="" width="100%" height="100%">
+                                                        </div>
+                                                        <div class="p-c-text" style="width: 300px;">
+                                                            <p class="mb-1">	ELF BAR BC5000, PEACH MANGO WATERMELON | DISPOSABLE VAPE</p>
+                                                            <span>SKU: ELF06-50mg</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>BDT 2,290</td>
+                                            <td>
+                                                <div class="row">
+                                                    <div class="col d-flex gap-1">
+                                                        <input type="number" class="form-control" style="width: 50px;" value="1">
+                                                        <button class="btn btn-primary">Update</button>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>BDT 2,290</td>
+                                            <td><i style="cursor: pointer;" class="fa-solid fa-trash"></i></td>
                                         </tr>
                                         <tr>
                                             <th scope="row">3</th>
-                                            <td colspan="2">Larry the Bird</td>
-                                            <td>@twitter</td>
+                                            <td>
+                                                <div class="row">
+                                                    <div class="col d-flex gap-2">
+                                                        <div class="product-cart-imgbox" style="width: 80px;height: 80px;">
+                                                            <img src="./assets/products/strawberry_mango.jpg" alt="" width="100%" height="100%">
+                                                        </div>
+                                                        <div class="p-c-text" style="width: 300px;">
+                                                            <p class="mb-1">	ELF BAR BC5000, PEACH MANGO WATERMELON | DISPOSABLE VAPE</p>
+                                                            <span>SKU: ELF06-50mg</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>BDT 2,290</td>
+                                            <td>
+                                                <div class="row">
+                                                    <div class="col d-flex gap-1">
+                                                        <input type="number" class="form-control" style="width: 50px;" value="1">
+                                                        <button class="btn btn-primary">Update</button>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td>BDT 2,290</td>
+                                            <td><i style="cursor: pointer;" class="fa-solid fa-trash"></i></td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-6">
+                        <div class="row mt-3">
+                            <div class="col-6 d-flex gap-2">
                                 <span>DISCOUNT CODES</span>
+                                <div class="input-group mb-3" style="width: 200px;height: 40px;" >
+                                    <input type="text" class="form-control" aria-label="coupon code" aria-describedby="basic-addon2">
+                                    <span class="input-group-text" style="cursor: pointer;" id="basic-addon2">APPLY</span>
+                                </div>
                             </div>
                             <div class="col-6">
                                 <div class="row">
-                                    <div class="col-8 text-end d-flex flex-column">
+                                    <div class="col-8 text-end d-flex flex-column gap-2">
                                         <span>Subtotal Incl. Tax</span>
                                         <span>Shipping (Flat Rate For Orders < BDT 3000 - Fixed)</span>
                                         <span><b>Grand Total</b></span>
                                     </div>
-                                    <div class="col-4 d-flex flex-column text-end">
+                                    <div class="col-4 d-flex flex-column gap-2 text-end">
                                         <span>BDT 2,290</span>
                                         <span>BDT 50</span>
-                                        <span>BDT 2,340</span>
+                                        <span><b>BDT 2,340</b></span>
                                     </div>
                                 </div>
                             </div>
