--- a/cart.html
+++ b/cart.html
@@ -324,14 +324,14 @@
                             </div>
                         </div>
                         <div class="row mt-3">
-                            <div class="col-6 d-flex gap-2">
+                            <div class="col-lg-6 col-12 d-flex gap-2">
                                 <span>DISCOUNT CODES</span>
                                 <div class="input-group mb-3" style="width: 200px;height: 40px;" >
                                     <input type="text" class="form-control" aria-label="coupon code" aria-describedby="basic-addon2">
                                     <span class="input-group-text" style="cursor: pointer;" id="basic-addon2">APPLY</span>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-lg-6 col-12">
                                 <div class="row">
                                     <div class="col-8 text-end d-flex flex-column gap-2">
                                         <span>Subtotal Incl. Tax</span>
