--- a/index.html
+++ b/index.html
@@ -233,22 +233,22 @@
                 <h2>PRODUCTS</h2>
                 <div class="row row-cols-2 ">
                     <div class="col-lg-6 col-12 p-2 list-item">
-                        <a href="#">
+                        <a href="./products.html">
                             <img src="./assets/product/product-new.jpg" alt="" width="100%" height="100%">
                         </a>
                     </div>
                     <div class="col-lg-6 col-12 p-2 list-item">
-                        <a href="#">
+                        <a href="./products.html">
                             <img src="./assets/product/product-2.webp" alt="" width="100%" height="100%">
                         </a>
                     </div>
                     <div class="col-lg-6 col-12 p-2 list-item">
-                        <a href="#">
+                        <a href="./products.html">
                             <img src="./assets/product/product-3.webp" alt="" width="100%" height="100%">
                         </a>
                     </div>
                     <div class="col-lg-6 col-12 p-2 list-item">
-                        <a href="#">
+                        <a href="./products.html">
                             <img src="./assets/product/product-4.webp" alt="" width="100%" height="100%">
                         </a>
                     </div>
