--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="col header-full">
                     <div class="row header-top">
                         <div class="col">
-                            <div class="container-fluid d-flex px-5 justify-content-between">
+                            <div class="container-fluid d-flex px-lg-5 px-sm-0 justify-content-between">
                                 <div class="top-left row align-items-center">
                                     <div class="col pr-0 for-after">
                                         <div class="same-day-delivary">
@@ -203,6 +203,47 @@
                                     </a>
                                 </li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="row for-mobil-menu-row">
+                        <div class="col ">
+                            <div class="container d-flex justify-content-between">
+                                <div class="sm-menu-icon">
+                                    <i class="fa-solid fa-bars"></i>
+                                    <div class="mobile-side-menu">
+                                        <div class="container d-flex flex-column justify-content-center align-items-center gap-3">
+                                            <i class="fa-solid fa-xmark mbm-xmark"></i>
+                                            <li>
+                                                <a href="./products.html">
+                                                    <span>Products</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="./brands.html">
+                                                    <span>Brands</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="./vape-guide.html">
+                                                    <span>VAPE GUIDE</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="./customar-service.html">
+                                                    <span>CUSTOMAR SERVICE</span>
+                                                </a>
+                                            </li>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="sm-logo" style="height: 50px;margin-top: -40px; margin-left: 45px;">
+                                    <img src="./assets/vs-new-logo.png" alt="" height="100%">
+                                </div>
+                                <div class="sm-right-icons d-flex gap-3 align-items-center">
+                                    <a href="./register.html"><i class="fa-solid fa-user"></i></a>
+                                    <a href="./cart.html"><i class="fa-solid fa-cart-shopping"  id="mobile-cart"></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
