--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                         <div class="col ">
                             <div class="container d-flex justify-content-between">
                                 <div class="sm-menu-icon">
-                                    <i class="fa-solid fa-bars"></i>
-                                    <div class="mobile-side-menu">
+                                    <i class="fa-solid fa-bars" id="mb-open"></i>
+                                    <div class="mobile-side-menu" id="mb-mnu">
                                         <div class="container d-flex flex-column justify-content-center align-items-center gap-3">
-                                            <i class="fa-solid fa-xmark mbm-xmark"></i>
+                                            <i class="fa-solid fa-xmark mbm-xmark" id="mbm-x"></i>
                                             <li>
                                                 <a href="./products.html">
                                                     <span>Products</span>
@@ -237,7 +237,7 @@
                                     </div>
                                 </div>
                                 <div class="sm-logo" style="height: 50px;margin-top: -40px; margin-left: 45px;">
-                                    <img src="./assets/vs-new-logo.png" alt="" height="100%">
+                                    <a href="./index.html"><img src="./assets/vs-new-logo.png" alt="" height="100%"></a>
                                 </div>
                                 <div class="sm-right-icons d-flex gap-3 align-items-center">
                                     <a href="./register.html"><i class="fa-solid fa-user"></i></a>
