--- a/single-product.html
+++ b/single-product.html
@@ -214,6 +214,11 @@
                                         <div class="container d-flex flex-column justify-content-center align-items-center gap-3">
                                             <i class="fa-solid fa-xmark mbm-xmark" id="mbm-x"></i>
                                             <li>
+                                                <a href="./index.html">
+                                                    <span>Home</span>
+                                                </a>
+                                            </li>
+                                            <li>
                                                 <a href="./products.html">
                                                     <span>Products</span>
                                                 </a>
