--- a/customar-service.html
+++ b/customar-service.html
@@ -330,9 +330,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="row justify-content-around mb-4">
-                        <div class="col login-opt"><a href="">Login with Facebook</a></div>
-                        <div class="col text-center"><span>OR</span></div>
-                        <div class="col login-opt lo2"><a href="">Login with Google</a></div>
+                        <div class="col-5 login-opt"><a href="">Login with Facebook</a></div>
+                        <div class="col-2 text-center"><span>OR</span></div>
+                        <div class="col-5 login-opt lo2"><a href="">Login with Google</a></div>
                     </div>
                     <form >
                         <input type="email" class="form-control mb-3" placeholder="Email ID">
