--- a/single-product.html
+++ b/single-product.html
@@ -273,27 +273,38 @@
             <div class="container my-5">
                 <div class="row">
                     <div class="col col-lg-6 col-md-12 col-12 p-slider">
-                        <div class="container-fluid s-p-container px-sm-0">
-                            <div class="slider-section-p" style="width: 100%;">
-                                <div class="single-p-slider" style="height: 100%;">
-                                    <div class="slider-item" style="height: 100%;">
-                                        <img src="./assets/products/peach_mango_watermelon.jpg" alt="" width="100%" height="100%">
+                        <div class="row">
+                            <div class="col">
+                                <div id="robotcarousel" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" src="./assets/products/peach_mango_watermelon.jpg" alt="swamp">
+                                        </div>
+                                        <div class="carousel-item active">
+                                            <img class="d-block w-100" src="./assets/products/peach_mango_watermelon.jpg" alt="flight">
+                                        </div>
                                     </div>
-                                </div>
-                                <button type="button" class="slick-prev"></button>
-                                <button type="button" class="slick-next"></button>
-                            </div>
-                            <div class="thumb-slider-p">
-                                <div class="row">
-                                    <div class="col-3"><div class="thumb-img"><img src="./assets/products/strawberry_mango.jpg" alt=""></div></div>
-                                    <div class="col-3"><div class="thumb-img"><img src="./assets/products/strawberry_mango.jpg" alt=""></div></div>
-                                    <div class="col-3"><div class="thumb-img"><img src="./assets/products/strawberry_mango.jpg" alt=""></div></div>
-                                    <div class="col-3"><div class="thumb-img"><img src="./assets/products/strawberry_mango.jpg" alt=""></div></div>
+                                    
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#robotcarousel" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#robotcarousel" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="row mt-3">
+                            <div class="col-3"><div class="thumb-img"><img src="./assets/products/strawberry_mango.jpg" alt=""></div></div>
+                            <div class="col-3"><div class="thumb-img"><img src="./assets/products/strawberry_mango.jpg" alt=""></div></div>
+                            <div class="col-3"><div class="thumb-img"><img src="./assets/products/strawberry_mango.jpg" alt=""></div></div>
+                            <div class="col-3"><div class="thumb-img"><img src="./assets/products/strawberry_mango.jpg" alt=""></div></div>
+                        </div>
                     </div>
-                    <div class="col col-lg-6 col-md-12 col-12 p-texts d-flex flex-column pb-5">
+                    <div class="col col-lg-6 col-md-12 col-12 p-texts d-flex flex-column mt-lg-0 mt-5">
                         <h3>ELF BAR</h3>
                         <h5>ELF BAR BC5000, PEACH MANGO WATERMELON | DISPOSABLE VAPE</h5>
                         <span>( CODE : ELF06 )</span>
@@ -322,7 +333,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="row my-5">
+                <div class="row my-5 ">
                     <div class="col">
                         <ul class="nav nav-tabs justify-content-center" role="tablist">
                             <li class="nav-item">
@@ -443,9 +454,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="row justify-content-around mb-4">
-                        <div class="col login-opt"><a href="">Login with Facebook</a></div>
-                        <div class="col text-center"><span>OR</span></div>
-                        <div class="col login-opt lo2"><a href="">Login with Google</a></div>
+                        <div class="col-5 login-opt"><a href="">Login with Facebook</a></div>
+                        <div class="col-2 text-center"><span>OR</span></div>
+                        <div class="col-5 login-opt lo2"><a href="">Login with Google</a></div>
                     </div>
                     <form >
                         <input type="email" class="form-control mb-3" placeholder="Email ID">
